--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <canvas id="canvas" width="1100" height="1100"></canvas>
         <h2 id="canvas-result"></h2>
     </div>
-
+    
+    <button onclick="theWheel.startAnimation()">Start</button>
     <button onclick="window.location.reload()">Reset</button>
 
     <script src='./js/Winwheel.min.js'></script>
