--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <script src='./js/Winwheel.min.js'></script>
     <script src='./js/main.js'></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+    <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script> -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
 </body>
 </html>
