--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
         <h2 id="canvas-result"></h2>
     </div>
     
-    <button onclick="theWheel.startAnimation()">Start</button>
+    <button onclick="onClickStartButton()">Start</button>
     <button onclick="window.location.reload()">Reset</button>
 
     <script src='./js/Winwheel.min.js'></script>
     <script src='./js/main.js'></script>
-    <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script> -->
-    <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 </body>
 </html>
